examples/errors/json_value_mismatch.raq
[request]
POST https://jsonplaceholder.typicode.com/posts

[headers]
Content-Type: application/json

[body type="json"]
{
  "title": "bar"
}

[assertions]
json_field: title ^foo$

Error: missing json field
   --> ./examples/errors/json_value_mismatch.raq
    |
 13 | json_field: title ^foo$
    |             ^^^^^
    | expl: json key "title" was not found in the response
    | note: run with -v to see full responses on assertion failures
